--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   /* 设置滚动条 ## */
   ::-webkit-scrollbar {
     /*滚动条整体样式*/
-    width: 6px;
+    width: 3px;
     /*高宽分别对应横竖滚动条的尺寸*/
-    height: 2px;
+    height: 3px;
   }
 
   ::-webkit-scrollbar-thumb {
@@ -36,6 +36,11 @@
   }
 
   /* 设置滚动条 @@ */
+
+  /* 黑夜模式样式 */
+  .dark{
+    background-color: rgba(52, 49, 49, 0.167);
+  }
 </style>
 
 </html>
